# dealflow-ai-engine

./: .env.example  .gitattributes  .gitignore  AI_WORKFLOWS.md  API_INTEGRATIONS.md  ARCHITECTURE.md  CI_CD.md  DATA_MODEL.md  DECISIONS.md  Dockerfile  GOVERNANCE.md  LINKEDIN_SUMMARY.md  Makefile  OBSERVABILITY.md  PIPELINES.md  PLAN.md  PORTFOLIO_ENTRY.md  README.md  RESULTS.md  RESUME_BULLETS.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  TESTING.md  USE_CASES.md  dbt_project.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
airflow/: README.md  crm_automation_dag.py  enrichment_scoring_dag.py  signal_ingestion_dag.py
dashboards/: README.md  metrics.md
dashboards/executive_summary/: README.md
dashboards/funnel_metrics/: README.md
dashboards/signal_quality/: README.md
dashboards/strategy_effectiveness/: README.md
docs/decisions/: 0001-canonical-postgres.md  0001-snowflake-curated-store.md  (+1 more)
infrastructure/: README.md
models/: schema.yml
notebooks/: company_scoring.ipynb  investor_matching.ipynb
sample_data/: README.md  company_signals.json  crm_activities.csv  deal_outcomes.csv  investor_profiles.json
sql/: backfills.sql  dimensions.sql  facts.sql  history.sql  incremental_models.sql  intermediate.sql  marts.sql  metrics.sql  procedures.sql  quality_checks.sql  reconciliation.sql  reports.sql  schema.sql  semantic_layer.sql  source_contracts.sql  tests.sql
src/: __init__.py
tests/: test_ai_strategy.py  test_entity_matching.py  test_ingestion.py  test_scoring.py  test_workflow_control.py
(+120 files in other folders)
